Fix: prev/next alignment

--- a/src/core/components/PrevNext/PrevNext.css
+++ b/src/core/components/PrevNext/PrevNext.css
@@ -1,5 +1,5 @@
 .prev-next-container {
     width: 100%;
     display: flex;
-    alignItems: center;
+    justify-content: center;
 }
